feat(update-role-usecase): add the get old permissions and return on new array with new and old permissions